# cmaker

./: CMakeLists.txt  CMakePresets.json  README.md
cmaker/: CMakeLists.txt
cmaker/include/cmaker/: CMakeLists.txt  Environment.hpp
cmaker/source/: CMakeLists.txt  Environment.cpp  Main.cpp
documentation/: 01.md  02.md  03 - Project Features.md  03.md
resources/: languages.json
resources/features/installable/: install.py
resources/features/testable/tests/example/: Main.cpp
resources/templates/executable/common/: CMakeLists.txt  CMakePresets.json
resources/templates/executable/common/!PROJECT!/: CMakeLists.txt
